Fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     display: grid;
     
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 500px 100px 400px 150px 100px 500px 400px 150px 500px 40px;
+    grid-template-rows: 120px 500px 100px 400px 150px 100px 500px 400px 150px 500px 40px;
     gap: 10px;
 
     justify-items: stretch;
@@ -29,25 +29,22 @@ body {
 }
 
 /* Title of the webpage */
-header {
+h1 {
     max-width: 1500px; 
-    font-size: 20px;
-    text-align: center;
+    font-size: 35px;
     margin: 10px auto;
-    background: #cfe0e7;
-    border: 2px solid black; 
 }   
 
 /* Subtitle under the title of the webpage */
 .subtitle {
-    font-size: 20px;
+    font-size: 15px;
     font-style: italic;
     font-weight: normal;
 }
 
 /* Headers for the section titles */
 h2 {
-    font-size: 28px;
+    font-size: 25px;
     font-weight: bold;
     margin: 5px
 }
@@ -61,98 +58,103 @@ h2 {
 
 
 /* ----- VISUALISATIONS ----- */
-
+/* Section Title */
+.grid_container > div:nth-child(1) {
+    grid-column: span 6;
+    background: #cfe0e7;
+    border: 2px solid black; 
+}
 
 /* Choropleth */
-.grid_container > div:nth-child(1) {
+.grid_container > div:nth-child(2) {
     grid-column: span 4 
 }
 
 /* Description: Choropleth */
-.grid_container > div:nth-child(2) {
+.grid_container > div:nth-child(3) {
     grid-column: span 2; 
     text-align: left;
 }
 
 /* Section Title */
-.grid_container > div:nth-child(3) {
+.grid_container > div:nth-child(4) {
     grid-column: span 6;
     background: #cfe0e7;
     border: 2px solid black; 
 }
 
 /* Stacked Bar Chart by Qualification */
-.grid_container > div:nth-child(4) {
+.grid_container > div:nth-child(5) {
     grid-column: span 3; 
 }
 
 /* Stacked Bar Chart by School Type */
-.grid_container > div:nth-child(5) {
+.grid_container > div:nth-child(6) {
     grid-column: span 3; 
     
 }
 
 /* Description: Stacked Bar Chart by Qualification */
-.grid_container > div:nth-child(6) {
+.grid_container > div:nth-child(7) {
     grid-column: span 3; 
     text-align: left;
 }
 
 /* Description: Stacked Bar Chart by School Type */
-.grid_container > div:nth-child(7) {
+.grid_container > div:nth-child(8) {
     grid-column: span 3; 
 }
 
 /* Section Description */
-.grid_container > div:nth-child(8) {
+.grid_container > div:nth-child(9) {
     grid-column: span 6;
     background: #cfe0e7;
     border: 2px solid black; 
 }
 
 /* Stacked Bar Chart of Gender by Study Field */
-.grid_container > div:nth-child(9) {
+.grid_container > div:nth-child(10) {
     grid-column: span 4; 
 }
 
 /* Description: Stacked Bar Chart of Gender by Study Field */
-.grid_container > div:nth-child(10) {
+.grid_container > div:nth-child(11) {
     grid-column: span 2; 
 }
 
 /* Pie Chart */
-.grid_container > div:nth-child(11) {
-    grid-column: span 3; 
-}
-
-/* Percentaged Bar Chart of Qualifications by Gender */
 .grid_container > div:nth-child(12) {
     grid-column: span 3; 
 }
 
-/* Description: Pie Chart */
+/* Percentaged Bar Chart of Qualifications by Gender */
 .grid_container > div:nth-child(13) {
     grid-column: span 3; 
 }
 
-/* Description: Percentaged Bar Chart of Qualifications by Gender */
+/* Description: Pie Chart */
 .grid_container > div:nth-child(14) {
     grid-column: span 3; 
 }
 
-/* Grouped Bar Chart by Income Group*/
+/* Description: Percentaged Bar Chart of Qualifications by Gender */
 .grid_container > div:nth-child(15) {
+    grid-column: span 3; 
+}
+
+/* Grouped Bar Chart by Income Group*/
+.grid_container > div:nth-child(16) {
     grid-column: span 4; 
 }
 
 /* Description: Grouped Bar Chart by Income Group */
-.grid_container > div:nth-child(16) {
+.grid_container > div:nth-child(17) {
     grid-column: span 2; 
 }
 
 /* Footer of acknowledgements */
-.grid_container > div:nth-child(17) {
+.grid_container > div:nth-child(18) {
     grid-column: span 6; 
-    font-size: 10px;
+    font-size: 11px;
     border: 0px;
 }
